--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,174 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #6D22B3;
+    display: flex;
+    padding: 30px;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Gets rid of arrows on number input */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.password-container--visible {
+    font-size: 52px;
+    cursor: pointer;
+    width: calc(100vw - 72px);
+    height: 150px;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.password-container--visible:hover {
+    font-size: 62px;
+    transition: 0.3s;
+}
+
+.password-container--visible:active {
+    font-size: 52px;
+    transition: 0.3s;
+}
+
+.password-container--invisible {
+    font-size: 52px;
+    cursor: default;
+    opacity: 0;
+    width: calc(100vw - 72px);
+    text-align: center;
+}
+
+.password {
+    margin-top: 30px;
+    font-weight: 900;
+    color: white;
+    margin-bottom: 85px;
+}
+
+.options-container-container {
+    display: flex;
+    justify-content: center;
+}
+
+.options-container {
+    background-color: #451572;
+    width: 430px;
+    height: 360px;
+    padding: 40px;
+    border-radius: 15px;
+
+    font-weight: 700;
+    font-size: 28px;
+    color: white;
+
+    box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.3);
+}
+
+.radio-button {
+    width: 25px;
+    height: 25px;
+    border: solid rgba(255, 255, 255, 0.445);
+    border-radius: 2px;
+    background-color: transparent;
+    transition-duration: 0.2s;
+}
+
+.radio-button:hover {
+    cursor: pointer;
+    background-color:rgba(255, 255, 255, 0.2)
+}
+
+.radio-button--checked {
+    width: 25px;
+    height: 25px;
+    border: solid rgba(255, 255, 255, 0.445);
+    border-radius: 2px;
+    background-color:rgba(255, 255, 255, 0.55);
+    transition-duration: 0.2s;
+}
+
+.radio-button--checked:hover {
+    cursor: pointer;
+    background-color:rgba(255, 255, 255, 0.2)
+}
+
+.radio-button-container {
+    display: grid;
+    grid-template-columns: 400px auto;
+    margin-bottom: 15px;
+}
+
+.radio-button-container label {
+    grid-column: 1;
+}
+
+.radio-button-container button {
+    grid-column: 2;
+    margin-top: 6px;
+}
+
+.pass-length-input-container {
+    margin-bottom: 15px;
+    display: grid;
+    grid-template-columns: 368px auto;
+}
+
+.pass-length-input {
+    font-size: 20px;
+    font-weight: 700;
+    width: 50px;
+    text-align: center;
+}
+
+.pass-length-input:focus {
+    outline: none;
+}
+
+.pass-length-input--error {
+    font-size: 20px;
+    font-weight: 700;
+    width: 50px;
+    text-align: center;
+    color: red;
+    border: 3px solid red;
+    border-radius: 3px;
+}
+
+.pass-length-input--error:focus {
+    outline: none;
+}
+
+.submit-btn {
+    font-size: 24px;
+    font-weight: 700;
+    padding: 10px;
+    border-radius: 7px;
+    border: none;
+    margin-top: 20px;
+
+    color: white;
+    background-color: #220a38;
+    transition: 0.2s;
+}
+
+.submit-btn:hover {
+    cursor: pointer;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+    transition: 0.2s;
+}
+
+.submit-btn:active {
+    cursor: pointer;
+    box-shadow: none;
+    transition: 0.2s;
 }
